--- a/computerWebAPI/appsettings.json
+++ b/computerWebAPI/appsettings.json
@@ -1,1 +1,10 @@
 
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
